<?xml version="1.0" encoding="utf-8"?>
<!--
    Navigation drawer menu items — Member 1
    All links to each member's screen
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/nav_dashboard" />

        <item
            android:id="@+id/nav_expenses"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_expenses" />

        <item
            android:id="@+id/nav_receipts"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_receipts" />

        <item
            android:id="@+id/nav_goals"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_goals" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_reports" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/nav_settings" />

    </group>

    <!-- Logout separated at bottom -->
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/nav_logout" />

</menu>